added dialog for failed http requests

--- a/datazilla/webapp/templates/homepage.html
+++ b/datazilla/webapp/templates/homepage.html
@@ -52,6 +52,14 @@
     </div>
     </div>
 </div>
+<div id="hp_failed_get_dialogue" style="display:none;">
+    <p>HTTP GET request failed</p>
+    <div class="ui-state-error ui-corner-all" style="padding: 0 .7em;">
+        <div>Status: <span id="hp_text_status"></span></div>
+        <div>Status Code: <span id="hp_status_code"></span></div>
+        <div>Error thrown: <span id="hp_error_thrown"></span></div>
+    </div>
+</div>
 <!-- NOTE: The graph container controls div is inserted into the jquery-ui .ui-tabs-nav container dynamically in javascript.-->
 <div style="display:none;" class="hp-graph-container-controls">
     <div style="margin:3px;" class="hp-light-text">
